# Ray-Tracing-API-Integration

./: CMakeLists.txt  PTAPI_for_GL.sln  README.md
Common/assimp/lib/: assimp.lib
PTAPI_for_GL/: KDstruct.h  OCLsetting.h  PTAPI_for_GL.vcxproj  RayTracing.cl  main.cpp
PTAPI_for_GL/pbrt_kdtree/: geometry.h  kdtreeaccel.cpp  kdtreeaccel.h
RTAPI/: KDTree.cpp  KDTree.h  KDstruct.h  OCLsetting.cpp  PTstruct.h  RTstruct.h  RayTracing.cl  RayTracing.cpp  RayTracing.h  main.cpp
RTAPI/pbrt_kdtree/: kdtreeaccel.h  readme.txt
